5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1728_2502.log
== TEST (2019-06-10 17:47:30) 
-- CODE:
from math import *
n=int(input())
t=0
pi=0
while (t<n):
	a=sqrt(12)*(1/(2*t-1)*(2*t+1)**(t-1))
	pi=pi+a
	t=t+1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(soma,8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:47:40) 
-- CODE:
from math import *
n=int(input())
t=0
pi=0
while (t<n):
	a=sqrt(12)*(1/(2*t-1)*(2*t+1)**(t-1))
	pi=pi+a
	t=t+1
print(round(pi,8))
-- OUTPUT:
148372715813.8428
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:48:39) 
-- CODE:
from math import *
n=int(input())
t=0
pi=0
while (t<n):
	a=((-1)**(2t-1))*sqrt(12)*(1/(2*t-1)*(2*t+1)**(t-1))
	pi=pi+a
	t=t+1
print(round(pi,8))
-- ERROR:
File "XXXX", line 6
    a=((-1)**(2t-1))*sqrt(12)*(1/(2*t-1)*(2*t+1)**(t-1))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:48:49) 
-- CODE:
from math import *
n=int(input())
t=0
pi=0
while (t<n):
	a=((-1)**(2*t-1))*sqrt(12)*(1/(2*t-1)*(2*t+1)**(t-1))
	pi=pi+a
	t=t+1
print(round(pi,8))
-- OUTPUT:
-148372715813.8428
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 17:49:00) 
-- CODE:
from math import *
n=int(input())
t=0
pi=0
while (t<n):
	a=((-1)**(2*t-1))*sqrt(12)*(1/(2*t-1)*(2*t+1)**(t-1))
	pi=pi+a
	t=t+1
print(round(pi,8))
-- EXECUTION TIME:
0.732916
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
-148372715813.8428
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
-1.337603072025237e+18
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
-3158215.27458223
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:49:11) 
-- CODE:
from math import *
n=int(input())
t=0
pi=0
while (t<n):
	a=((-1)**(2*t-1))*sqrt(12)*(1/(2*t-1)*(2*t+1)**(t-1))
	pi=pi+a
	t=t+1
print(round(pi,8))
-- OUTPUT:
-148372715813.8428
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:49:32) 
-- CODE:
from math import *
n=int(input())
t=0
pi=0
while (t<n):
	a=((-1)**(2*t+1))*sqrt(12)*(1/(2*t-1)*(2*t+1)**(t-1))
	pi=pi+a
	t=t+1
print(round(pi,8))
-- OUTPUT:
-148372715813.8428
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:49:47) 
-- CODE:
from math import *
n=int(input())
t=0
pi=0
while (t<n):
	a=((-1)**(t-1))*sqrt(12)*(1/(2*t-1)*(2*t+1)**(t-1))
	pi=pi+a
	t=t+1
print(round(pi,8))
-- OUTPUT:
-141445129473.83356
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:49:59) 
-- CODE:
from math import *
n=int(input())
t=0
pi=0
while (t<n):
	a=((-1)**(t-1))*sqrt(12)*(1/(2*t-1)*(2*t+1)**(t-1))
	pi=pi+a
	t=t+1
print(round(pi,8))
-- OUTPUT:
-141445129473.83356
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:50:48) 
-- CODE:
from math import *
n=int(input())
t=0
pi=0
while (t<n):
	a=sqrt(12)*(((-1)**(t+1))/(2*t-1)*(2*t+1)**(t-1))
	pi=pi+a
	t=t+1
print(round(pi,8))
-- OUTPUT:
-141445129473.83356
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:51:23) 
-- CODE:
from math import *
n=int(input())
t=0
pi=0
while (t<n):
	a=sqrt(12)*(((-1)**(t+1))/(2*t-1)*(3)**(t-1))
	pi=pi+a
	t=t+1
print(round(pi,8))
-- OUTPUT:
-2613.81704575
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:51:45) 
-- CODE:
from math import *
n=int(input())
t=0
pi=0
while (t<n):
	a=sqrt(12)*(((-1)**(t+1))/(2*t-1)*(3**(t-1)
	pi=pi+a
	t=t+1
print(round(pi,8))
-- ERROR:
File "XXXX", line 7
    pi=pi+a
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:51:51) 
-- CODE:
from math import *
n=int(input())
t=0
pi=0
while (t<n):
	a=sqrt(12)*(((-1)**(t+1))/(2*t-1)*(3**(t-1))
	pi=pi+a
	t=t+1
print(round(pi,8))
-- ERROR:
File "XXXX", line 7
    pi=pi+a
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:52:00) 
-- CODE:
from math import *
n=int(input())
t=0
pi=0
while (t<n):
	a=sqrt(12)*(((-1)**(t+1))/(2*t-1)*(3**(t-1)))
	pi=pi+a
	t=t+1
print(round(pi,8))
-- OUTPUT:
-2613.81704575
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 17:52:30) 
-- CODE:
from math import *
n=int(input())
t=0
pi=0
while (t<n):
	a=sqrt(12)*(((-1)**(t+1))/((2*t-1)*(3**(t-1))))
	pi=pi+a
	t=t+1
print(round(pi,8))
-- OUTPUT:
13.53389536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 17:52:47) 
-- CODE:
from math import *
n = int(input("Numero de termos: "))

t = 1

soma = 0

while (t <= n):
	tg = sqrt(12)*((-1)**(t + 1)) / ((2*t - 1)*(3**(t-1)))
	soma = soma + tg
	t = t + 1

print(round(soma,8))
-- EXECUTION TIME:
0.647047
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
